対象ディレクトリ変更

--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -2,35 +2,39 @@ name: php-cs-fixer-and-larastan
 
 on:
   push:
-    branches: [ "main" ]
+    branches: ["main"]
 
 jobs:
   php-cs-fixer:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v4
-      with:
-        ref: ${{ github.head_ref }}
-        sparse-checkout: |
-          .github
-          src
-    - name: Setup PHP
-      uses: shivammathur/setup-php@v2
-      with:
-        php-version: '8.3'
-    - name: Cache vender
-      id: cache
-      uses: actions/cache@v4
-      with:
-        path: src/backend/vendor
-        key: ${{ runner.os }}-composer-${{ hashFiles('**/composer.lock') }}
-        restore-keys: |
-          ${{ runner.os }}-composer-
-    - name: Composer install
-      if: ${{ steps.cache.outputs.cache-hit != 'true' }}
-      run: composer install --working-dir=./src/backend -n --prefer-dist
-    - name: Execute php-cs-fixer-and-larastan
-      run: |
-        ./src/backend/vendor/bin/php-cs-fixer fix --diff --dry-run --using-cache=no --config=./src/backend/.php-cs-fixer.dist.php .
-      
+      - uses: actions/checkout@v4
+        with:
+          ref: ${{ github.head_ref }}
+          sparse-checkout: |
+            .github
+            src
+      - name: Setup PHP
+        uses: shivammathur/setup-php@v2
+        with:
+          php-version: "8.3"
+      - name: Cache vender
+        id: cache
+        uses: actions/cache@v4
+        with:
+          path: src/backend/vendor
+          key: ${{ runner.os }}-composer-${{ hashFiles('**/composer.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-composer-
+      - name: Composer install
+        if: ${{ steps.cache.outputs.cache-hit != 'true' }}
+        run: composer install --working-dir=./src/backend -n --prefer-dist
+      - name: Execute php-cs-fixer-and-larastan
+        run: |
+          ./src/backend/vendor/bin/php-cs-fixer fix --diff --dry-run --using-cache=no --config=./src/backend/.php-cs-fixer.dist.php ./src/backend/app
+          ./src/backend/vendor/bin/php-cs-fixer fix --diff --dry-run --using-cache=no --config=./src/backend/.php-cs-fixer.dist.php ./src/backend/config
+          ./src/backend/vendor/bin/php-cs-fixer fix --diff --dry-run --using-cache=no --config=./src/backend/.php-cs-fixer.dist.php ./src/backend/database
+          ./src/backend/vendor/bin/php-cs-fixer fix --diff --dry-run --using-cache=no --config=./src/backend/.php-cs-fixer.dist.php ./src/backend/routes
+          ./src/backend/vendor/bin/php-cs-fixer fix --diff --dry-run --using-cache=no --config=./src/backend/.php-cs-fixer.dist.php ./src/backend/lang
+          ./src/backend/vendor/bin/php-cs-fixer fix --diff --dry-run --using-cache=no --config=./src/backend/.php-cs-fixer.dist.php ./src/backend/tests
