--- a/src/backend/.env.example
+++ b/src/backend/.env.example
@@ -20,9 +20,9 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=mysql
+DB_HOST=weight-mg-db
 DB_PORT=3306
-DB_DATABASE=weight_db
+DB_DATABASE=weight_mg
 DB_USERNAME=root
 DB_PASSWORD=1234
 
