--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -32,10 +32,10 @@ jobs:
         run: composer install --working-dir=./src/backend -n --prefer-dist
       - name: Execute php-cs-fixer-and-larastan
         run: |
-          ./src/backend/vendor/bin/php-cs-fixer fix --diff --dry-run --using-cache=no --config=./src/backend/.php-cs-fixer.dist.php ./src/backend/app
-          ./src/backend/vendor/bin/php-cs-fixer fix --diff --dry-run --using-cache=no --config=./src/backend/.php-cs-fixer.dist.php ./src/backend/config
-          ./src/backend/vendor/bin/php-cs-fixer fix --diff --dry-run --using-cache=no --config=./src/backend/.php-cs-fixer.dist.php ./src/backend/database
-          ./src/backend/vendor/bin/php-cs-fixer fix --diff --dry-run --using-cache=no --config=./src/backend/.php-cs-fixer.dist.php ./src/backend/routes
-          ./src/backend/vendor/bin/php-cs-fixer fix --diff --dry-run --using-cache=no --config=./src/backend/.php-cs-fixer.dist.php ./src/backend/lang
-          ./src/backend/vendor/bin/php-cs-fixer fix --diff --dry-run --using-cache=no --config=./src/backend/.php-cs-fixer.dist.php ./src/backend/tests
+          ./src/backend/vendor/bin/php-cs-fixer fix --using-cache=no --config=./src/backend/.php-cs-fixer.dist.php ./src/backend/app
+          ./src/backend/vendor/bin/php-cs-fixer fix --using-cache=no --config=./src/backend/.php-cs-fixer.dist.php ./src/backend/config
+          ./src/backend/vendor/bin/php-cs-fixer fix --using-cache=no --config=./src/backend/.php-cs-fixer.dist.php ./src/backend/database
+          ./src/backend/vendor/bin/php-cs-fixer fix --using-cache=no --config=./src/backend/.php-cs-fixer.dist.php ./src/backend/routes
+          ./src/backend/vendor/bin/php-cs-fixer fix --using-cache=no --config=./src/backend/.php-cs-fixer.dist.php ./src/backend/lang
+          ./src/backend/vendor/bin/php-cs-fixer fix --using-cache=no --config=./src/backend/.php-cs-fixer.dist.php ./src/backend/tests
           ./src/backend/vendor/bin/phpstan analyse -c ./src/backend/phpstan.neon --memory-limit=2G
